# tennis-manager

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
tennis_manager/: db.sqlite3  manage.py
tennis_manager/app/: admin.py  apps.py  models.py  urls.py  views.py
tennis_manager/app/migrations/: 0001_initial.py  0002_alter_user_name_alter_user_surname.py
tennis_manager/app/static/app/javascripts/: datatables.js
tennis_manager/app/static/app/styles/: base.css
tennis_manager/app/templates/app/: base.html  fields.html  home.html  matches.html  users.html
tennis_manager/tennis_manager/: asgi.py  settings.py  settings_dev.py  urls.py  wsgi.py
